Fixed Tab and mobile view responsive alignment

--- a/footer.css
+++ b/footer.css
@@ -197,5 +197,5 @@
     justify-content: space-between;
     /* align-items: center; */
     /* flex-wrap: wrap;  */
-    padding: 3px;
+    /* padding: 3px; */
 }
